Changes ball to green

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     z-index: 1;
     right: 150px;
     bottom: 250px;
-    background-color: orange;
+    background-color: green;
     border: 3px solid black;
     border-radius: 50%;
     animation-duration: 2s;
