Changes backboard to blue

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@
   position: absolute;
   width: 60px;
   height: 40px;
-  background-color: #fff;
+  background-color: blue;
   border: 3px solid #000;
   bottom: 30px; /* Position at the bottom of the hoop container */
   top: 5px;
