--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     z-index: 1;
     right: 150px;
     bottom: 250px;
-    background-color: green;
+    background-color: orange;
     border: 3px solid black;
     border-radius: 50%;
     animation-duration: 2s;
@@ -97,7 +97,7 @@
   position: absolute;
   width: 60px;
   height: 40px;
-  background-color: blue;
+  background-color: #fff;
   border: 3px solid #000;
   bottom: 30px; /* Position at the bottom of the hoop container */
   top: 5px;
